--- a/src/components/shop-header/shop-header.css
+++ b/src/components/shop-header/shop-header.css
@@ -4,6 +4,11 @@
 
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
 }
 
 .shop-header .logo {
